[gd_scene load_steps=4 format=3 uid="uid://dss3fec3hncs7"]

[ext_resource type="Script" uid="uid://bf1e7icugvqcq" path="res://Game/pause/pauseMenu.gd" id="1_1klir"]
[ext_resource type="Theme" uid="uid://chhk32s317h3e" path="res://Main menu/text.tres" id="2_337in"]
[ext_resource type="PackedScene" uid="uid://btti4yhvq13ba" path="res://Main menu/settings.tscn" id="3_37hvr"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1klir")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.5
offset_top = -224.5
offset_right = 321.5
offset_bottom = 224.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="unpause" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_337in")
text = "Go Back"

[node name="settings" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_337in")
text = "Settings
"

[node name="exit" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_337in")
text = "Exit"

[node name="Settings" parent="." instance=ExtResource("3_37hvr")]
unique_name_in_owner = true

[connection signal="pressed" from="Control/Panel/VBoxContainer/unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/exit" to="." method="_on_exit_pressed"]
